# ayatana-settings

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  NEWS  README.md  ayatana-settings  setup.py  update-po.sh  update-pot.sh  update-translations.sh
ayatanasettings/: appdata.py  builder.py  logger.py  psutil.py
data/: CMakeLists.txt  ayatana-settings.8  ayatana-settings.desktop.in  ayatana-settings.ui  ayatana-settings.xml
data/applications/: ayatana-settings.desktop.in
data/ayatana-settings/: ayatana-settings.glade
data/man/man1/: ayatana-settings.1
data/man/man8/: ayatana-settings.8
data/usr/share/applications/: ayatana-settings.desktop
data/usr/share/ayatana-settings/: ayatana-settings.glade
debian/: changelog  control  copyright  rules  watch
po/: LINGUAS  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  ayatana-settings.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  (+96 more)
src/: CMakeLists.txt  glib.h  gtk.h  main.c
